<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qhackers.sci18.sleepin.AlarmInfoActivity"
    tools:showIn="@layout/activity_alarm_info">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/repeatDays"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/repeatDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/selectRingtone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker">

    </LinearLayout>

    <TextView
        android:id="@+id/selectRingtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="chooseRingtone"
        android:text="Select Ringtone"
        app:layout_constraintBottom_toTopOf="@+id/isVibrate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatDays" />

    <CheckBox
        android:id="@+id/isVibrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/vibrate"
        app:layout_constraintBottom_toTopOf="@+id/alarmName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectRingtone" />

    <EditText
        android:id="@+id/alarmName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Alarm name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cancelOk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isVibrate" />

    <LinearLayout
        android:id="@+id/cancelOk"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmName"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelAlarmChanges"
            android:text="CANCEL" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveAlarmChanges"
            android:text="OK" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
